# learn

./: .gitignore  CLAUDE.md  README.md
cli/: README.md  pyproject.toml
cli/src/learn_cli/: __init__.py  cli.py  clipboard.py  config.py  picker_tui.py  practice.py  practice_tui.py  shell.py  shellinit.py  signature.py  tui.py
scripts/: build-installer.sh
supabase/: auth.sql  config.toml  schema.sql  signatures.sql
supabase/migrations/: 20250101000003_signatures.sql  20250101000004_breakdown.sql  20250101000005_match_context.sql
web/: package-lock.json  package.json
web/public/: install.sh
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/auth/refresh/: route.ts
web/src/app/api/auth/start/: route.ts
web/src/app/api/auth/verify/: route.ts
web/src/app/api/explain/: route.ts
web/src/app/api/find/: route.ts
web/src/app/api/here/: route.ts
web/src/app/api/log/: route.ts
web/src/app/api/score/: route.ts
web/src/app/api/search/: route.ts
web/src/app/api/suggest/: route.ts
web/src/lib/: annotate.ts  auth.ts  context.ts  env.ts  scoring.ts  supabase.ts
