[project]
name = "learn"
version = "0.1.0"
description = "Learn the terminal by reinforcing the commands you've actually used."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
learn = "learn_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learn_cli"]
